--- a/html/browser/slop_menustyle4.css
+++ b/html/browser/slop_menustyle4.css
@@ -21,6 +21,12 @@ body {
 	font-weight: 600;
 }
 
+.delay_span {
+	font-size: 18px;
+	font-weight: 600;
+	color: #fa2222;
+}
+
 a.join_drifter_queue, a.join_drifter_queue:link, a.join_drifter_queue:visited, a.join_drifter_queue:active {
 	text-decoration: none;
 	font-size: 18px;
